--- a/Views/Gathering/Index.cshtml
+++ b/Views/Gathering/Index.cshtml
@@ -24,9 +24,11 @@
         <section class="py-5 text-center container">
             <div class="row py-lg-5">
                 <div class="col-lg-6 col-md-8 mx-auto">
+                    <h1>Zbiórki do których masz dostęp</h1>
+
                     <p>
                         <div class="btn-group">
-                            <div class="btn btn-sm btn-outline-secondary" style="background-color:aliceblue;color:black;text-decoration:none;">@Html.ActionLink("Stwórz zbiórkę", "Create")</div>
+                            <div class="btn btn-sm btn-outline-secondary" style="background-color:aliceblue;color:black;text-decoration:none;">@Html.ActionLink("Stwórz nową zbiórkę", "Create")</div>
                         </div>
                     </p>
                 </div>
