--- a/Views/Gathering/Index.cshtml
+++ b/Views/Gathering/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    var user_id=ViewBag.user_id;
 }
 
 <!DOCTYPE html>
@@ -51,8 +52,10 @@
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
                                             @Html.ActionLink("Szczegóły", "Details", new { id = item.gathering_id }, new { @class = "btn btn-sm btn-outline-secondary" })
-                                            @Html.ActionLink("Edytuj", "Edit", new { id = item.gathering_id }, new { @class = "btn btn-sm btn-outline-secondary" })
-
+                                            @if (item.creator_id == user_id)
+                                            {
+                                                @Html.ActionLink("Edytuj", "Edit", new { id = item.gathering_id }, new { @class = "btn btn-sm btn-outline-secondary" })
+                                            }
                                         </div>
                                         <small class="text-muted">@Html.DisplayFor(modelItem => item.finish_date)</small>
                                     </div>
