--- a/Views/Gathering/Create.cshtml
+++ b/Views/Gathering/Create.cshtml
@@ -5,63 +5,55 @@
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
 
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
-</head>
 <main>
-    <body>
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
-
-            <div class="form-horizontal">
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+        <div class="Clear-flex-box-row">
 
 
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.target_amount, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.target_amount, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.target_amount, "", new { @class = "text-danger" })
+            <div class="Flex-box-col">
+                Nazwa zbiórki
+                <div class="Clear-flex-box-col">
+                    <div class="Flex-box-input">
+                        <img src="~/Images/fundName.png" />
+                        @Html.TextBoxFor(model => model.gathering_name)
                     </div>
+
                 </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.finish_date, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.finish_date, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.finish_date, "", new { @class = "text-danger" })
+                Kwota cel
+                <div class="Clear-flex-box-col">
+                    <div class="Flex-box-input">
+                        <img src="~/Images/fundraise.png" />
+                        @Html.TextBoxFor(model => model.target_amount)
                     </div>
+
                 </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.gathering_name, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.gathering_name, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.gathering_name, "", new { @class = "text-danger" })
+                Data zakończenia zbiórki
+                <div class="Clear-flex-box-col">
+                    <div class="Flex-box-input">
+                        <img src="~/Images/calendar.png" />
+                        @Html.TextBoxFor(model => model.finish_date)
                     </div>
+
                 </div>
 
 
+                <br>
+                <input type="submit" value="  Stwórz  " style="border: 1px solid; border-radius: 15px" />
+                <input type="button" value="Powrót" onclick="location.href='@Url.Action("Index", "User")'" style=" border: 1px solid; border-radius: 15px" />
 
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Create" class="btn btn-default" />
-                    </div>
-                </div>
+                @Html.ValidationSummary(false, "")
+
+
             </div>
-        }
-
-        <div>
-            @Html.ActionLink("Back to List", "Index")
         </div>
-    </body>
+    }
+
 </main>
-</html>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
