--- a/Views/Gathering/Edit.cshtml
+++ b/Views/Gathering/Edit.cshtml
@@ -4,64 +4,54 @@
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Edit</title>
-</head>
 <main>
-<body>
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        
-        <div class="form-horizontal">
-            <h4>GatheringClass</h4>
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.gathering_id)
-    
-            
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.target_amount, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.target_amount, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.target_amount, "", new { @class = "text-danger" })
+        <div class="Clear-flex-box-row">
+
+
+            <div class="Flex-box-col">
+                Nazwa zbiórki
+                <div class="Clear-flex-box-col">
+                    <div class="Flex-box-input">
+                        <img src="~/Images/fundName.png" />
+                        @Html.TextBoxFor(model => model.gathering_name)
+                    </div>
+
                 </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.finish_date, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.finish_date, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.finish_date, "", new { @class = "text-danger" })
+
+                Kwota cel
+                <div class="Clear-flex-box-col">
+                    <div class="Flex-box-input">
+                        <img src="~/Images/fundraise.png" />
+                        @Html.TextBoxFor(model => model.target_amount)
+                    </div>
+
                 </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.gathering_name, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.gathering_name, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.gathering_name, "", new { @class = "text-danger" })
+
+                Data zakończenia zbiórki
+                <div class="Clear-flex-box-col">
+                    <div class="Flex-box-input">
+                        <img src="~/Images/calendar.png" />
+                        @Html.TextBoxFor(model => model.finish_date)
+                    </div>
+
                 </div>
-            </div>
-    
-           
-    
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Save" class="btn btn-default" />
-                </div>
+
+                <br>
+                <input type="submit" value="  Zapisz  " style="border: 1px solid; border-radius: 15px" />
+                <input type="button" value="Powrót" onclick="location.href='@Url.Action("Index", "User")'" style=" border: 1px solid; border-radius: 15px" />
+
+                @Html.ValidationSummary(false, "")
+
+
             </div>
         </div>
     }
-    
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
-</body>
-    </main>
-</html>
+
+</main>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
