wygload gathering details edit create

--- a/Views/Shared/_HomeLayout.cshtml
+++ b/Views/Shared/_HomeLayout.cshtml
@@ -21,7 +21,7 @@
             <!--<div class="Flex-header-buttons">
              @Html.ActionLink("Moje zbiórki", "Index", "Gathering")
             </div>-->
-            <div class="Flex-header-socials">
+            <div class="Flex-header-socials" style="justify-content: center;">
                 <img src="@Url.Content("~/Images/login.png")" />
                 @Html.ActionLink("Zaloguj", "Login", "User")
                 <img src="@Url.Content("~/Images/add_user.png")" />
