--- a/Views/Gathering/Create.cshtml
+++ b/Views/Gathering/Create.cshtml
@@ -19,44 +19,49 @@
         {
             @Html.AntiForgeryToken()
 
-            <div class="form-horizontal">
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="Clear-flex-box-row">
+            <div class="Flex-box-col">
+                <h2>Stwórz zbiórke</h2>
 
-
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.target_amount, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                Oczekiwana kwota
+                <div class="Clear-flex-box-col">
+                    <div class="Flex-box-input">
+                        <img src="~/Images/cash.png" />
                         @Html.EditorFor(model => model.target_amount, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.target_amount, "", new { @class = "text-danger" })
+
                     </div>
                 </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.finish_date, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                Data końca zbiórki
+                <div class="Clear-flex-box-col">
+                    <div class="Flex-box-input">
+                        <img src="~/Images/data.png" />
                         @Html.EditorFor(model => model.finish_date, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.finish_date, "", new { @class = "text-danger" })
+                        <br>
+
                     </div>
                 </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.gathering_name, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                Nazwa zbiórki
+                <div class="Clear-flex-box-col">
+                    <div class="Flex-box-input">
+                        <img src="~/Images/name.png" />
                         @Html.EditorFor(model => model.gathering_name, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.gathering_name, "", new { @class = "text-danger" })
+                        <br>
+
                     </div>
                 </div>
 
 
 
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Create" class="btn btn-default" />
-                    </div>
-                </div>
+
+                <input type="submit" value="Stwórz" style="border: 1px solid; border-radius: 15px" />
+                <br>
+                @Html.ValidationMessageFor(model => model.target_amount, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.finish_date, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.gathering_name, "", new { @class = "text-danger" })
             </div>
+        </div>
         }
 
         <div>
