--- a/Views/Gathering/Details.cshtml
+++ b/Views/Gathering/Details.cshtml
@@ -9,6 +9,8 @@
     var wallet = ViewBag.wallet;
     var in_out = ViewBag.in_out;
     var errorMessage = ViewBag.ErrorMessage;
+    var procent = ViewBag.procent;
+    var procent1 = ViewBag.procent1;
 }
 
 <!DOCTYPE html>
@@ -19,6 +21,25 @@
     <link rel="stylesheet" href="~/Content/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/Features-Clean.css" />
     <link rel="stylesheet" href="~/css/font-awesome.min.css" />
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load("current", {packages:["corechart"]});
+      google.charts.setOnLoadCallback(drawChart);
+      function drawChart() {
+        var data = google.visualization.arrayToDataTable([
+          ['Czesc', 'Kwota'],
+          ['Wplacone',     @procent],
+            ['Niewpłacone',      @procent1]
+        ]);
+
+        var options = {
+            is3D: true,
+        };
+
+        var chart = new google.visualization.PieChart(document.getElementById('piechart_3d'));
+        chart.draw(data, options);
+      }
+    </script>
 </head>
 <main>
     
@@ -51,7 +72,9 @@
                     <div class="col-sm-6 col-lg-4 item">
                         <i class="fa fa-pie-chart icon"></i>
                         <h3 class="name">Zebrana kwota</h3>
-                        <p class="description">@Html.DisplayFor(model => model.current_amount)</p>
+                        <p class="description">
+                            <div id="piechart_3d" style="width: 280px; height: 100px;"></div>
+                        
                     </div>
 
                     @if (creator)
