--- a/Views/Gathering/Edit.cshtml
+++ b/Views/Gathering/Edit.cshtml
@@ -17,51 +17,54 @@
     {
         @Html.AntiForgeryToken()
         
-        <div class="form-horizontal">
-            <h4>GatheringClass</h4>
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.gathering_id)
-    
-            
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.target_amount, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+    <div class="Clear-flex-box-row">
+        <div class="Flex-box-col">
+            <h2>Edytuj zbiórke</h2>
+
+            Oczekiwana kwota
+            <div class="Clear-flex-box-col">
+                <div class="Flex-box-input">
+                    <img src="~/Images/cash.png" />
                     @Html.EditorFor(model => model.target_amount, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.target_amount, "", new { @class = "text-danger" })
+
                 </div>
             </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.finish_date, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+
+            Data końca zbiórki
+            <div class="Clear-flex-box-col">
+                <div class="Flex-box-input">
+                    <img src="~/Images/data.png" />
                     @Html.EditorFor(model => model.finish_date, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.finish_date, "", new { @class = "text-danger" })
+                    <br>
+
                 </div>
             </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.gathering_name, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+
+            Nazwa zbiórki
+            <div class="Clear-flex-box-col">
+                <div class="Flex-box-input">
+                    <img src="~/Images/name.png" />
                     @Html.EditorFor(model => model.gathering_name, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.gathering_name, "", new { @class = "text-danger" })
+                    <br>
+
                 </div>
             </div>
-    
-           
-    
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Save" class="btn btn-default" />
-                </div>
-            </div>
+
+
+
+
+            <input type="submit" value="Zapisz" style="border: 1px solid; border-radius: 15px" />
+            <br>
+            @Html.ValidationMessageFor(model => model.target_amount, "", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.finish_date, "", new { @class = "text-danger" })
+            @Html.ValidationMessageFor(model => model.gathering_name, "", new { @class = "text-danger" })
         </div>
-    }
-    
-    <div>
-        @Html.ActionLink("Back to List", "Index")
     </div>
+        }
+
+        <div>
+            @Html.ActionLink("Back to List", "Index")
+        </div>
 </body>
     </main>
 </html>
