--- a/Views/Gathering/Edit.cshtml
+++ b/Views/Gathering/Edit.cshtml
@@ -50,6 +50,16 @@
                 </div>
             </div>
 
+            Opis zbiórki
+            <div class="Clear-flex-box-col">
+                <div class="Flex-box-input">
+                    <img src="~/Images/birthday.png" />
+                    @Html.EditorFor(model => model.gathering_description, new { htmlAttributes = new { @class = "form-control" } })
+                    <br>
+
+                </div>
+            </div>
+
 
 
 
