--- a/Views/Gathering/Details.cshtml
+++ b/Views/Gathering/Details.cshtml
@@ -33,7 +33,17 @@
         ]);
 
         var options = {
-            is3D: true,
+            is3D: false,
+            width: 310,
+            height: 260,
+            backgroundColor: '#E4E4E4',
+            slices: {
+                0: { color: 'purple' },
+                1: { color: 'transparent' }
+            },
+            legend:'none'
+            
+            
         };
 
         var chart = new google.visualization.PieChart(document.getElementById('piechart_3d'));
