--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <div class="col">
                         <div class="card shadow-sm">
-                            <img src="https://iv.pl/images/f8ac6759dba840cd04f4cee063b908ac.jpg" class="img-thumbnail" alt="...">
+                            <img src="https://iv.pl/images/37a4f4a8280b214557d7c05f3d7a76d2.md.jpg" class="img-thumbnail" alt="...">
 
                             <div class="card-body">
                                 <p>Na prezent </p>
@@ -40,7 +40,7 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <img src="https://iv.pl/images/2233658c604bf863c167aa31b8df7d81.jpg" class="img-thumbnail" alt="...">
+                            <img src="https://iv.pl/images/2133f38b54f78853b5e9848422e7e434.jpg" class="img-thumbnail" alt="...">
 
                             <div class="card-body">
                                 <p>Na podróz ze znajomymi</p>
@@ -52,7 +52,7 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <img src="https://iv.pl/images/6e67f53b2202ad250783b794c8e40a51.jpg" class="img-thumbnail" alt="...">
+                            <img src="https://iv.pl/images/f8f3c66c57163586ed870009cf4a3ec3.md.jpg" class="img-thumbnail" alt="...">
 
                             <div class="card-body">
                                 <p>Na nowy sprzęt</p>
