--- a/Views/Gathering/Index.cshtml
+++ b/Views/Gathering/Index.cshtml
@@ -44,11 +44,11 @@
                     {
                         <div class="col">
                             <div class="card shadow-sm">
-                                <img src="https://magazynvip.pl/wp-content/uploads/2019/04/AdobeStock_205831001-750x423.jpg" class="img-thumbnail" alt="...">
+                                <img src=@Html.DisplayFor(modelItem => item.gathering_image) class="img-thumbnail" alt="...">
 
                                 <div class="card-body">
                                     <h4 class="card-text">@Html.DisplayFor(modelItem => item.gathering_name)</h4>
-                                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                    <p class="card-text">@Html.DisplayFor(modelItem => item.gathering_description)</p>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
                                             @Html.ActionLink("Szczegóły", "Details", new { id = item.gathering_id }, new { @class = "btn btn-sm btn-outline-secondary" })
