--- a/Views/Gathering/Details.cshtml
+++ b/Views/Gathering/Details.cshtml
@@ -36,7 +36,7 @@
             is3D: false,
             width: 310,
             height: 260,
-            backgroundColor: '#E4E4E4',
+            backgroundColor: 'none',
             slices: {
                 0: { color: 'purple' },
                 1: { color: 'transparent' }
