--- a/Views/Gathering/Create.cshtml
+++ b/Views/Gathering/Create.cshtml
@@ -81,20 +81,20 @@
                             "Select Gender")
 
                             <!--
-    <select name="photoChoice">
-        <option value="f8f3c66c57163586ed870009cf4a3ec3.md.jpg">Komputer</option>
-        <option value="37a4f4a8280b214557d7c05f3d7a76d2.md.jpg">Happy Birthday</option>
-        <option value="2133f38b54f78853b5e9848422e7e434.jpg">Podróż</option>
-        <option value="5a44dd8d3f705370964f43de9b02a000.md.jpg">Urodziny Taty</option>
-        <option value="6b4cf546e0f5c41a898e6e6a6b8a2328.png">Urodziny Mamy</option>
-        <option value="e0d00e943197121d362a44d82507678d.md.jpg">Rower</option>
-        <option value="ba7eacee9938e52d08015f9035ffbd16.jpg">Telefon</option>
+                <select name="photoChoice">
+                    <option value="f8f3c66c57163586ed870009cf4a3ec3.md.jpg">Komputer</option>
+                    <option value="37a4f4a8280b214557d7c05f3d7a76d2.md.jpg">Happy Birthday</option>
+                    <option value="2133f38b54f78853b5e9848422e7e434.jpg">Podróż</option>
+                    <option value="5a44dd8d3f705370964f43de9b02a000.md.jpg">Urodziny Taty</option>
+                    <option value="6b4cf546e0f5c41a898e6e6a6b8a2328.png">Urodziny Mamy</option>
+                    <option value="e0d00e943197121d362a44d82507678d.md.jpg">Rower</option>
+                    <option value="ba7eacee9938e52d08015f9035ffbd16.jpg">Telefon</option>
 
 
 
-                            </select>
+                                        </select>
 
-                             <input type="submit" value="Pokaż" />-->
+                                         <input type="submit" value="Pokaż" />-->
 
                         </div>
                         <div style="padding:10px;">
@@ -104,7 +104,7 @@
                             }
                         </div>
                     </form>
-                </body> 
+                </body>
 
 
                 <input type="submit" value="Stwórz" style="border: 1px solid; border-radius: 15px" />
@@ -112,6 +112,8 @@
                 @Html.ValidationMessageFor(model => model.target_amount, "", new { @class = "text-danger" })
                 @Html.ValidationMessageFor(model => model.finish_date, "", new { @class = "text-danger" })
                 @Html.ValidationMessageFor(model => model.gathering_name, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.gathering_description, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.gathering_image, "", new { @class = "text-danger" })
             </div>
         </div>
         }
