--- a/Views/Gathering/Delete.cshtml
+++ b/Views/Gathering/Delete.cshtml
@@ -13,58 +13,25 @@
 </head>
 <main>
 <body>
-    <h3>Are you sure you want to delete this?</h3>
+    <h3>Czy na pewno chcesz usunąć tą zbiórke?</h3>
     <div>
-        <h4>GatheringClass</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.current_amount)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.current_amount)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.target_amount)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.target_amount)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.finish_date)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.finish_date)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.gathering_name)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.gathering_name)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.creator_id)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.creator_id)
-            </dd>
-    
-        </dl>
+        <div class="card shadow-sm">
+        <img src=@Html.DisplayFor(model=>model.gathering_image) class="img-thumbnail" alt="...">
+
+            
+        <h4 class="card-text">@Html.DisplayFor(model => model.gathering_name)</h4>
+        <p class="card-text">@Html.DisplayFor(model => model.gathering_description)</p>
+               
+            
+        </div>
     
         @using (Html.BeginForm()) {
             @Html.AntiForgeryToken()
     
-            <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
+            <div class="features-clean">
+                <input type="submit" value="Delete" class="btn btn-primary" style="width: 200px; border: 1px solid; border-radius: 15px; padding:10px; background:none; cursor:pointer;" /> 
+                <br />
+                <br />
                 @Html.ActionLink("Back to List", "Index")
             </div>
         }
