--- a/Views/Gathering/Create.cshtml
+++ b/Views/Gathering/Create.cshtml
@@ -78,10 +78,10 @@
 
                             @Html.DropDownListFor(m => m.gathering_image,
                             new SelectList(Enum.GetValues(typeof(Prezentomat.Models.image))),
-                            "Select Gender")
+                            "Select Photo")
 
                             <!--
-                <select name="photoChoice">
+                    <select name="photoChoice">
                     <option value="f8f3c66c57163586ed870009cf4a3ec3.md.jpg">Komputer</option>
                     <option value="37a4f4a8280b214557d7c05f3d7a76d2.md.jpg">Happy Birthday</option>
                     <option value="2133f38b54f78853b5e9848422e7e434.jpg">Podróż</option>
