--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -27,8 +27,8 @@
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <div class="col">
                         <div class="card shadow-sm">
-                            <img src="https://iv.pl/images/37a4f4a8280b214557d7c05f3d7a76d2.md.jpg" class="img-thumbnail" alt="...">
-
+                            <img src="~/Images/a.jpg" class="img-thumbnail" alt="...">
+                          
                             <div class="card-body">
                                 <p>Na prezent </p>
                                 <p class="card-text">Nasza strona jest idealny miejscem na założenie zbiórki na urodzinowy prezent.</p>
@@ -40,8 +40,7 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <img src="https://iv.pl/images/2133f38b54f78853b5e9848422e7e434.jpg" class="img-thumbnail" alt="...">
-
+                            <img src="~/Images/j.jpg" class="img-thumbnail" alt="...">
                             <div class="card-body">
                                 <p>Na podróz ze znajomymi</p>
                                 <p class="card-text">U nas łatwo zbierzesz wspólnie ze znajomymi pieniądze potrzebne na waszą idealną podróż.</p>
@@ -52,8 +51,8 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <img src="https://iv.pl/images/f8f3c66c57163586ed870009cf4a3ec3.md.jpg" class="img-thumbnail" alt="...">
-
+                            <img src="~/Images/computer.jpg"class="img-thumbnail" alt="...">
+                            
                             <div class="card-body">
                                 <p>Na nowy sprzęt</p>
                                 <p class="card-text">Komputer Twojego kolegi jest już przestarzały? Nie da rady na nim pracować? Zafundujcie mu nowy sprzęt, aby mógł cieszyć się pracą.</p>
